Kjør andre selftester async